--- a/style/default-style.css
+++ b/style/default-style.css
@@ -3,7 +3,7 @@ body {
     background-color: #000000;
     color: #00ff00;
     font-family: "Comic Sans MS", cursive;
-    cursor: url('https://emojiisland.com/pages/download-page?download=true&file=https://cdn.shopify.com/s/files/1/1061/1924/files/Eggplant_Emoji.png?9629857664421748268&name=Eggplant%20Emoji#'), auto;
+    cursor: url('https://cur.cursors-4u.net/nature/nat-10/nat956.cur'), auto;
     margin: 0;
     padding: 20px;
 }
